--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=proyecto2.c5tlfvmcnzc2.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=proyecto
+DB_DATABASE=proyecto2
 DB_USERNAME=root
-DB_PASSWORD=admin
+DB_PASSWORD=kamikazeucraniano
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,13 +28,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=proyectodsi115gp11@gmail.com
+MAIL_PASSWORD=ypykwuthtynwkybq
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
