--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=proyecto2.c5tlfvmcnzc2.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=proyecto
+DB_DATABASE=proyecto2
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=kamikazeucraniano
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
